nova (2012.1~e3-0ubuntu2) UNRELEASED; urgency=low

  * debian/nova-common.{install, postinst}: Install policy.json on all
    Nova nodes (LP: #923817)
  * debian/rules: Remove installation of policy.json (moved to nova-common),
    point to the correct upstream git repository.

 -- Adam Gandelman <adamg@canonical.com>  Mon, 30 Jan 2012 10:24:35 -0800

nova (2012.1~e3-0ubuntu1) precise; urgency=low

  [Chuck short]
  * New upstream release.
  * debian/patches/fix-nova-rootwraper-env.patch: Dropped
    no longer needed.
  * debian/nova-compute-{kvm,xen,uml,lxc}.conf: Add the connection
    type "--connection=libvirt" since libvirt is no longer the default.

  [Adam Gandelman]
  * debian/nova.conf: Define connection_type=libvirt in common nova.conf
    instead of nova-compute-*.conf until Bug #921294 is addressed.

  [Vish Ishaya]
   * debian/mans/nova-cert.8, debian/nova-cert.init, debian/nova-cert.install,
     debian/nova-cert.logrotate, debian/nova-cert.manpages, 
     debian/nova-cert.upstart.in, debian/control, debian/source_nova.py:
     Add nova-cert.

 -- Chuck Short <zulcss@ubuntu.com>  Thu, 26 Jan 2012 10:29:13 -0500

nova (2012.1~e3~20120120.12170-0ubuntu1) precise; urgency=low

  [Chuck Short]
  * New upstream version.
  * debian/nova-vncproxy.install, debian/nova-vncproxy.upstart.in:
    nova-vncproxy becomes nova-xvpvncproxy.
  * debian/nova.conf: Really use the nova rootwrapper. (LP: #918179)
  * debian/nova_sudoers: Fix typo in rootwrap usage.
  * debian/patches/kombu_tests_timeout.patch: Skip 
    "test_iterconsume_errors_will_reconnect" test.

  [Dan Prince]
  * Add policy.json to packages.

  [Thierry Carrez]
   * debian/*.pyinstall: Ship filter files in each node... (LP: #919105)
   * debian/python-nova.pyremove: ...and no longer in python-nova (LP: #919105)
   * debian/patches/fix-nova-rootwraper-env.patch: Fix temporary issue with 
     nova-rootwrap and nova-compute.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 20 Jan 2012 11:54:15 -0500
