@@ -17,4 +17,4 @@ pre-start script
 	modprobe nbd
 end script
 
-exec su -c "nova-compute --flagfile=/etc/nova/nova.conf --flagfile=/etc/nova/nova-compute.conf" nova
+exec su -s /bin/sh -c "exec nova-compute --flagfile=/etc/nova/nova.conf --flagfile=/etc/nova/nova-compute.conf" nova
