@@ -14,4 +14,4 @@ pre-start script
 	chown nova:root /var/lock/nova/
 end script
 
-exec su -c "nova-network --flagfile=/etc/nova/nova.conf" nova
+exec su -s /bin/sh -c "exec nova-network --flagfile=/etc/nova/nova.conf" nova
