@@ -15,4 +15,4 @@ pre-start script
 	chown nova:root /var/lock/nova/
 end script
 
-exec su -c "nova-xvpvncproxy --flagfile=/etc/nova/nova.conf" nova
+exec su -s /bin/sh -c "exec nova-xvpvncproxy --flagfile=/etc/nova/nova.conf" nova
