@@ -12,4 +12,4 @@ pre-start script
 	chown nova:root /var/run/nova/
 end script
 
-exec su -c "nova-volume --flagfile=/etc/nova/nova.conf" nova
+exec su -s /bin/sh -c "exec nova-volume --flagfile=/etc/nova/nova.conf" nova
