@@ -1,1 +1,3 @@
+Defaults:nova !requiretty
+
 nova ALL = (root) NOPASSWD: /usr/bin/nova-rootwrap
